добавил вывод всех стран

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,37 @@ $secondColor:#000
     position: fixed
     justify-content: center
     align-items: center
+.table
+    display: flex
+.table_contener
+    display: flex
+    flex-direction: column
+.code
+    border: 1px solid #000000
+    @include width_height(100px,50px)
+    text-align: center
+    line-height: 50px
+
+.flag 
+    border: 1px solid #000000
+    @include width_height(100px,50px)
+
+.name 
+    border: 1px solid #000000
+    @include width_height(200px,50px)
+    text-align: center
+    line-height: 50px
+.capital 
+    border: 1px solid #000000
+    @include width_height(200px,50px)
+    text-align: center
+    line-height: 50px
+.population 
+    border: 1px solid #000000
+    @include width_height(200px,50px)
+    text-align: center
+    line-height: 50px
+
 
 
 
