--- a/css/main.css
+++ b/css/main.css
@@ -66,4 +66,51 @@ a, a:hover {
   position: fixed;
   justify-content: center;
   align-items: center;
+}
+
+.table {
+  display: flex;
+}
+
+.table_contener {
+  display: flex;
+  flex-direction: column;
+}
+
+.code {
+  border: 1px solid #000000;
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.flag {
+  border: 1px solid #000000;
+  width: 100px;
+  height: 50px;
+}
+
+.name {
+  border: 1px solid #000000;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.capital {
+  border: 1px solid #000000;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.population {
+  border: 1px solid #000000;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
 }/*# sourceMappingURL=main.css.map */
