--- a/sass/main.sass
+++ b/sass/main.sass
@@ -19,11 +19,9 @@ $secondColor:#000
     @include width_height(100px,50px)
     text-align: center
     line-height: 50px
-
 .flag 
     border: 1px solid #000000
     @include width_height(100px,50px)
-
 .name 
     border: 1px solid #000000
     @include width_height(200px,50px)
@@ -39,7 +37,7 @@ $secondColor:#000
     @include width_height(200px,50px)
     text-align: center
     line-height: 50px
-
-
+#info
+    display: block
 
 
