--- a/sass/main.sass
+++ b/sass/main.sass
@@ -2,6 +2,9 @@
 @import reset
 $baseColor:#fff
 $secondColor:#000
+body
+    font-family: 'Roboto'
+
 .preloader_box
     display: none
     width: 100vw
@@ -9,11 +12,6 @@ $secondColor:#000
     position: fixed
     justify-content: center
     align-items: center
-.table
-    display: flex
-.table_contener
-    display: flex
-    flex-direction: column
 .code
     border: 1px solid #000000
     @include width_height(100px,50px)
@@ -24,17 +22,17 @@ $secondColor:#000
     @include width_height(100px,50px)
 .name 
     border: 1px solid #000000
-    @include width_height(200px,50px)
+    @include width_height(300px,50px)
     text-align: center
     line-height: 50px
 .capital 
     border: 1px solid #000000
-    @include width_height(200px,50px)
+    @include width_height(300px,50px)
     text-align: center
     line-height: 50px
 .population 
     border: 1px solid #000000
-    @include width_height(200px,50px)
+    @include width_height(300px,50px)
     text-align: center
     line-height: 50px
 #info
