--- a/font/Roboto-multy/stylesheet.css
+++ b/font/Roboto-multy/stylesheet.css
@@ -3,7 +3,7 @@
     src: url('Roboto-Bold.woff2') format('woff2'),
         url('Roboto-Bold.woff') format('woff'),
         url('Roboto-Bold.ttf') format('truetype');
-    font-weight: bold;
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
