--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,19 @@ a, a:hover {
   text-decoration: none;
 }
 
+#map {
+  width: 500px;
+  height: 300px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
+}
+
+.contener {
+  display: flex;
+  justify-content: space-between;
 }
 
 .title {
@@ -74,6 +84,21 @@ body {
   color: red;
   font-weight: 400;
   position: relative;
+  top: -15px;
+}
+
+.link2, .link1 {
+  margin-left: 243px;
+  color: blue;
+  font-weight: 400;
+  position: relative;
+}
+
+.link1 {
+  top: -40px;
+}
+
+.link2 {
   top: -15px;
 }
 
