--- a/sass/main.sass
+++ b/sass/main.sass
@@ -2,9 +2,17 @@
 @import reset
 $baseColor:#fff
 $secondColor:#000
+#map
+    width: 500px
+    height: 300px
+
 body
     font-family: Arial, Helvetica, sans-serif
     font-weight: 600
+.contener
+    display: flex
+    justify-content: space-between
+    
 .title
     display: flex
     margin-bottom: 26px
@@ -14,21 +22,26 @@ body
     font-weight: 400
     position: relative
     top: -15px
+.link2,.link1
+    margin-left: 243px
+    color: blue
+    font-weight: 400
+    position: relative
+.link1
+    top: -40px
+.link2
+    top: -15px
 .string
     margin-left: 243px
     color: red
     font-weight: 400
     position: relative
     top: -40px
-
 .sub_contener
     display: flex
     flex-direction: column
-.sub_contener,.title
-    // margin: 20px 0 20px 0
 .sub_tatle
     color: green
-
     margin-left: 100px
     display: flex
     justify-content: start
